Fin spec interface + correction ordre dans implem